# diaas-calculator-rust

./: .env  .env.localhost  .gitignore  Cargo.toml  README.md  diesel.toml
fixtures/: csv.load  csv.load.localhost  csv_load_food.localhost  csv_load_food_i18n.localhost  csv_load_mix.localhost  csv_load_mix_food.localhost  food.csv  food_i18n.csv  load_data.ksh  mix.csv  mix_food.csv
migrations/2024-01-06-143814_create_food/: down.sql  up.sql
migrations/2024-05-11-133631_i18n_fr/: down.sql  up.sql
migrations/2024-06-15-134651_add_hidden_and_greenhouse_gas/: down.sql  up.sql
migrations/2024-07-18-131501_mix/: down.sql  up.sql
migrations/2024-08-02-212048_add_mix_recipe_link/: down.sql  up.sql
migrations/2024-08-07-134351_add-greenhouse-gas-details/: down.sql  up.sql
migrations/2024-08-13-134451_expert_comments/: down.sql  up.sql
postgres-and-adminer/: docker-compose.yml
src/: constants.rs  food.rs  main.rs  mix.rs  results.rs  schema.rs
src/food/: actions.rs  models.rs
src/mix/: actions.rs  models.rs
test/: diaas-calculator dev.postman_collection.json
