[package]
name = "diaas-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
env_logger = "0.10.1"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = { version= "1.0.194" , features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
