[package]
name = "diaas-calculator-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
log = { version = "0.4.22" }
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = { version= "1.0.208" , features = ["derive"] }
